# Sulpur

./: .clang-format  .gitignore  CMakeLists.txt  DEVLOG.md  LICENSE.txt  README.md  Sulpur.cpp  Sulpur.h  compile.sh  compile_commands.json
assets/shaders/: compile.bat  compile.sh  fragment_shader.spv  shader_base.frag  shader_base.vert  vertex_shader.spv  vetext_shader.spv
src/: Sulpur.cpp  app.cpp  app.hpp  sulper_renderer_system.cpp  sulpur_camera.cpp  sulpur_camera.hpp  sulpur_device.cpp  sulpur_device.hpp  sulpur_game_object.hpp  sulpur_model.cpp  sulpur_model.hpp  sulpur_pipeline.cpp  sulpur_pipeline.hpp  sulpur_render_system.cpp  sulpur_render_system.hpp  sulpur_renderer.cpp  sulpur_renderer.hpp  sulpur_renderer_system.hpp  sulpur_swap_chain.cpp  sulpur_swap_chain.hpp  sulpur_window.cpp  sulpur_window.hpp
